fixed overflow issue

--- a/app/app.css
+++ b/app/app.css
@@ -835,7 +835,7 @@ tr {
   flex-direction: column;
   /* justify-content: space-between;
   align-items: start; */
-  width: 100%;
+  /* width: 100%; */
   margin-left: 1.5rem;
 }
 .searchContainer {
